# bookshelf

./: .vale.ini  pyproject.toml
.github/workflows/: release.yml
bookshelf/: __init__.py  definitions.py
data/: manifest.json
datapacks/Bookshelf/data/bs.data/functions/: __load__.mcfunction
datapacks/Bookshelf/data/bs.random/function/: __load__.mcfunction
docs/: index.md  mentions-legales.md  quickstart.md  related.md
docs/changelog/: v4.1.0.md
docs/modules/: spline.md  tree.md  vector.md  xp.md
modules/: config.json
modules/bs.block/: .todo  gen_block.py  gen_blocks.py  module.json
modules/bs.dump/data/bs.dump/test/: var.mcfunction
modules/bs.environment/: generator.py  module.json
modules/bs.health/data/bs.health/function/: __load__.mcfunction
modules/bs.hitbox/: gen_shapes.py  module.json
modules/bs.interaction/data/bs.interaction/test/: clear_events.mcfunction  on_hover.mcfunction  on_hover_enter.mcfunction  on_hover_leave.mcfunction  on_hover_logout.mcfunction  on_hover_once.mcfunction  (+3 more)
modules/bs.string/: generator.py  module.json
src/bookshelf/: __init__.py  definitions.py  logging.py  utils.py
src/bookshelf/.wait/: logger.py  utils.py
src/bookshelf/.wait/commands/: modules.py
src/bookshelf/.wait/minecraft/: biome.py  block.py
src/bookshelf/.wait/plugins/: load_tests.py  release_pack.py
src/bookshelf/commands/: __init__.py  docs.py  modules.py
src/bookshelf/packtest/: __init__.py  assets.py  process.py  runner.py
src/bookshelf/plugins/: auto_import.py  auto_log_setup.py  bundle_packs.py  dependencies.py  edit_tags.py  gen_help.py  gen_load.py  load_tests.py  release_pack.py  set_pack_meta.py  setup_templates.py
src/bookshelf/schemas/: __init__.py  feature.py  manifest.py  module.py  version.py
src/bookshelf/services/minecraft/: __init__.py  utils.py
(+62 files in other folders)
