[build-system]
requires = ["pdm-backend", "pdm-build-locked"]
build-backend = "pdm.backend"

[project]
name = "mcbookshelf"
dynamic = ["version"]
description = "Scripts for Bookshelf and the Github pipeline."
authors = [{ name = "Bookshelf Contributors", email = "contact@gunivers.net" }]
dependencies = [
  "beet>=0.111.0",
  "click>=8.2.1",
  "httpx>=0.28.1",
  "lectern>=0.34.0",
  "platformdirs>=4.3.8",
  "pydantic>=2.11.7",
  "rich>=14.0.0",
  "watchfiles>=1.1.0",
]
requires-python = ">=3.12,<4.0"
license = { text = "MPL-2.0" }

[project.optional-dependencies]
dev = [
  "mypy>=1.17.0",
  "ruff>=0.12.5",
  "types-colorama>=0.4.15.20240311",
  "types-docutils>=0.21.0.20250722",
  "types-requests>=2.32.4.20250611",
]
docs = [
  "linkify-it-py>=2.0.3",
  "myst-parser>=4.0.1",
  "pydata-sphinx-theme>=0.16.0",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinx-minecraft>=1.0.5",
  "sphinx-togglebutton>=0.3.2",
  "sphinx>=8.2.3",
]

[project.scripts]
build = "bookshelf.commands.modules:build"
docs = "bookshelf.commands.docs:docs"
examples = "bookshelf.commands.examples:examples"
modules = "bookshelf.commands.modules:modules"
watch = "bookshelf.commands.modules:watch"

[tool.pdm]
distribution = true
build.custom-hook = "build.py"
build.source-includes = ["modules"]
version.getter = "src.bookshelf:version"
version.source = "call"

[tool.poetry]
version = "1.0"
packages = [
  { include = "bookshelf", from = "src" }
]

[tool.mypy]
mypy_path = "src"
files = ["src", "modules"]
explicit_package_bases = true
namespace_packages = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
  "D100",
  "D203",
  "D213",
  "INP001",
  "S603",
  "TRY400",
  "UP017",
]
